# # `lsec`
#
# Laravel Security Audit CLI for scanning Laravel applications for
# common security issues, insecure patterns, and risky configuration.
#
# (c) 2026 Afaan Bilal <https://afaan.dev>
#
[package]
name = "lsec"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
